--- a/GazPromForChildren2025WebApp/Pages/Summary/PositionByBestTime/Component.razor
+++ b/GazPromForChildren2025WebApp/Pages/Summary/PositionByBestTime/Component.razor
@@ -1,8 +1,8 @@
 ﻿@if (Data != null)
 {
     <div class="card" style="width: 32rem;">
-        <div class="card-header bg-secondary text-bg-secondary">
-            <h5 class="card-title mb-0">Позиция по лучшему времени</h5>
+        <div class="card-header bg-tertiary text-bg-secondary">
+            <h5 class="card-title mb-0">Позиция по лучшему кругу</h5>
         </div>
         <table class="table table-striped table-hover table-bordered mb-0">
             <thead>
