--- a/GazPromForChildren2025WebApp/Pages/Summary/PositionTotal/Component.razor
+++ b/GazPromForChildren2025WebApp/Pages/Summary/PositionTotal/Component.razor
@@ -1,7 +1,7 @@
 ﻿@if (Data != null)
 {
     <div class="card" style="width: 32rem;">
-        <div class="card-header bg-primary text-bg-primary">
+        <div class="card-header bg-success text-bg-success">
             <h5 class="card-title mb-0">Позиция итоговая</h5>
         </div>
         <table class="table table-striped table-hover table-bordered mb-0">
