--- a/GazPromForChildren2025WebApp/Pages/Shared/_Layout.cshtml
+++ b/GazPromForChildren2025WebApp/Pages/Shared/_Layout.cshtml
@@ -4,10 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Газпром детям 2025, Группа 14-16 лет</title>
-    <script type="importmap"></script>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    @* <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    @* <link rel="stylesheet" href="~/GazPromForChildren2025WebApp.styles.css" asp-append-version="true" /> *@
+    <link rel="stylesheet" href="~/GazPromForChildren2025WebApp.styles.css" asp-append-version="true" /> *@
 </head>
 <body>
     <header>
@@ -20,10 +23,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Итоги</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="Регламент турнира SMP RACING.PDF"target="_blank">Регламент</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Races">Заезды</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="Регламент турнира SMP RACING.PDF" target="_blank">Регламент</a>
                         </li>
                     </ul>
                 </div>
@@ -36,9 +42,8 @@
         </main>
     </div>
 
-
     @* <script src="~/lib/jquery/dist/jquery.min.js"></script> *@
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    @* <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
     @* <script src="~/js/site.js" asp-append-version="true"></script> *@
 
     @await RenderSectionAsync("Scripts", required: false)
